[gd_scene load_steps=4 format=3 uid="uid://b7ewhav2hodtx"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1"]
[ext_resource type="Script" path="res://scripts/Camera2D.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://b1bu3tifoandp" path="res://Scenes/GameWorld.tscn" id="3"]

[node name="Game" type="Node"]
script = ExtResource("1")

[node name="Viewports" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="ViewportContainer2" type="SubViewportContainer" parent="Viewports"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="SubViewport" parent="Viewports/ViewportContainer2"]
handle_input_locally = false
size = Vector2i(574, 648)
render_target_update_mode = 4

[node name="Camera2D2" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2"]
position_smoothing_enabled = true
position_smoothing_speed = 10.0
script = ExtResource("2")

[node name="ViewportContainer1" type="SubViewportContainer" parent="Viewports"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="SubViewport" parent="Viewports/ViewportContainer1"]
handle_input_locally = false
size = Vector2i(574, 648)
render_target_update_mode = 4

[node name="GameWorld" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource("3")]

[node name="Camera2D1" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
position_smoothing_speed = 10.0
script = ExtResource("2")

[node name="Line2D" type="Line2D" parent="Viewports/ViewportContainer1"]
scale = Vector2(1, 12.385)
points = PackedVector2Array(0, 800, 0, 0)
default_color = Color(0, 0, 0, 1)
